<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageviewHinh"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageviewHinh"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/productcode"
        android:textColor="#ff00"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/textviewMa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageviewHinh"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="20dp"
        android:text="Mã"
        android:textColor="#003cff"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textviewMa"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/productname"
        android:textColor="#ff00"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/textviewTen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textviewMa"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="20dp"
        android:text="Tên"
        android:textColor="#003cff"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textviewTen"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/productdescription"
        android:textColor="#ff00"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/textviewMota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textviewTen"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="20dp"
        android:text="Mô Tả"
        android:textColor="#003cff"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textviewMota"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/producttype"
        android:textColor="#ff00"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/textviewLoai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textviewMota"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="20dp"
        android:text="Loại"
        android:textColor="#003cff"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textviewLoai"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/productprice"
        android:textColor="#ff00"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/textviewGia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textviewLoai"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="20dp"
        android:text="Giá"
        android:textColor="#003cff"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textviewLoai"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/textviewGia"
        android:text="/đơn vị"
        android:textColor="#003cff"
        android:textSize="22dp" />
</RelativeLayout>
